# chatloop

./: .gitignore  Cargo.toml  DEBUG_BUILD.md  DEVELOPMENT.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_GUIDE.md  MODEL_SETUP_GUIDE.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  README.md  RECENT_FIXES.md  WORKER_CONFIGS.md  build-docker.ps1  build.ps1  diagnose.ps1  docker-compose-all-in-one.yml  docker-compose.yml  docker-run.ps1  docker-run.sh  docs DIRECTORY_STRUCTURE.md  test-build.sh
configs/: coordinator-config.yaml  worker-config-0.yaml  worker-config-1.yaml  worker-config-2.yaml  worker-config-3.yaml  worker-config.yaml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  metrics.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs  main.rs  router.rs  worker_client.rs
crates/proto/: Cargo.toml  build.rs  inference.proto  worker.proto
crates/proto/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: batching.rs  inference.rs  lib.rs  main.rs  model.rs
crates/worker/src/grpc/: client.rs  mod.rs  server.rs
crates/worker/src/tensor/: mod.rs  ops.rs  safetensors.rs
docker/: Dockerfile.debug  Dockerfile.minimal  all-in-one.Dockerfile  base.Dockerfile  coordinator.Dockerfile  worker.Dockerfile
docs/: INSTALL_RUST.md
python/model_splitter/: requirements.txt  split_model.py
yarn/: coordinator-service.xml  worker-service.xml
yarn/launch-scripts/: start-coordinator.sh  start-worker.sh
