[workspace]
members = [
    "crates/proto",
    "crates/common",
    "crates/worker",
    "crates/coordinator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ChatLoop Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }

# Memory and performance
memmap2 = "0.9"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"

# Tensor operations (CPU-only, SIMD-friendly)
candle-core = { version = "0.6", features = ["mkl"] }
half = "2.4"

# Protocol buffers
prost-types = "0.13"

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Numerical operations
num-traits = "0.2"
num-complex = "0.4"

# Utilities
lazy_static = { version = "1.5" }
