[package]
name = "chatloop-common"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
prometheus.workspace = true
lazy_static = "1.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
