[package]
name = "chatloop-coordinator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chatloop-coordinator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
chatloop-common = { path = "../common" }
chatloop-proto = { path = "../proto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
lazy_static.workspace = true

# gRPC and networking
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Configuration
config.workspace = true

# UUID
uuid.workspace = true
